# rSoccer

./: .gitignore  Dockerfile  README.md  flake.nix  main.py  pyproject.toml  run.py  train.py
