[project]
name = "rsoccer-gym"
version = "1.0.0"
description = "RSoccer Gym is an open-source framework to study Reinforcement Learning for RoboCup's Small Size League and IEEE VSSS competition environments."
authors = [
    {name = "FelipeMartins96", email = "fbm2@cin.ufpe.br"},
    {name = "goncamateus", email = "mgm4@cin.ufpe.br"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10.0,<3.11"
dependencies = [
    "rc-robosim>=1.2",
    "gymnasium>=1.0.0",
    "pygame>=2.6.1",
    "stable-baselines3>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.28.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
